# rbar2

./: .gitignore  Cargo.toml  LICENSE  install.sh  readme.md
src/: audio.rs  main.rs
src/utils/: audio.rs  bash.rs  mod.rs
src/widgets/: clock.rs  cputemp.rs  crypto.rs  loadavg.rs  mod.rs  sound.rs  weather.rs
