[package]
name = "rbar"
version = "0.1.0"
authors = ["accusitive"]
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }
chrono = "0.4.19"
ureq = "2.2.0"
dotenv = "0.15.0"